# swayevents

./: Cargo.toml  LICENSE  Makefile  README.md  example_config.toml
src/: main.rs  output.rs
