[package]
name = "swayevents"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
dirs = "5.0.1"
futures-util = "0.3.31"
notify = "7.0.0"
serde = { version = "1.0.215", features = ["derive"] }
swayipc-async = "2.0.4"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.8.19"
